trunk/Archive2/e8/c8af6c9f328222/output
main.cpp:16:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str1 <<  " \ " ) é "  << num1 <<  ' \ n ' ; 
     ^
main.cpp:16:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str1 <<  " \ " ) é "  << num1 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:16:82: warning: multi-character character constant [-Wmultichar]
main.cpp:17:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str2 <<  " \ " ) é "  << num2 <<  ' \ n ' ; 
     ^
main.cpp:17:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str2 <<  " \ " ) é "  << num2 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:17:82: warning: multi-character character constant [-Wmultichar]
main.cpp:18:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) é "  << num3 <<  ' \ n ' ; 
     ^
main.cpp:18:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) é "  << num3 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:18:82: warning: multi-character character constant [-Wmultichar]
main.cpp:19:5: error: stray '\' in program
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) é "  << NUM4 <<  ' \ n ' ; 
     ^
main.cpp:19:82: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) é "  << NUM4 <<  ' \ n ' ; 
                                                                                  ^
main.cpp:19:82: warning: multi-character character constant [-Wmultichar]
main.cpp: In function 'int principal()':
main.cpp:6:12: error: 'de' does not name a type
     const  de char  * str1 =  "42" ; 
            ^
main.cpp:7:12: error: 'de' does not name a type
     const  de char  * str2 =  "3.14159" ; 
            ^
main.cpp:8:12: error: 'caractere' does not name a type
     const  caractere  * str3 =  "31337 com as palavras" ; 
            ^
main.cpp:9:12: error: 'de' does not name a type
     const  de char  * str4 =  "palavras e 2" ;
            ^
main.cpp:11:30: error: 'str1' was not declared in this scope
     int num1 = std :: atoi ( str1 ) ; 
                              ^
main.cpp:12:30: error: 'str2' was not declared in this scope
     int num2 = std :: atoi ( str2 ) ; 
                              ^
main.cpp:13:30: error: 'str3' was not declared in this scope
     int num3 = std :: atoi ( str3 ) ; 
                              ^
main.cpp:14:30: error: 'str4' was not declared in this scope
     int NUM4 = std :: atoi ( str4 ) ;
                              ^
main.cpp:16:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str1 <<  " \ " ) é "  << num1 <<  ' \ n ' ; 
                                                            ^
main.cpp:17:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str2 <<  " \ " ) é "  << num2 <<  ' \ n ' ; 
                                                            ^
main.cpp:18:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str3 <<  " \ " ) é "  << num3 <<  ' \ n ' ; 
                                                            ^
main.cpp:19:60: error: unknown escape sequence: '\040'
     std :: cout  <<  "std :: atoi ( \ " "  << str4 <<  " \ " ) é "  << NUM4 <<  ' \ n ' ; 
                                                            ^
main.cpp:20:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
